2020-04-03  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pk-dump.pk (dump): Avoid generating a spurious blank
	character after the ASCII ruler.

2020-04-03 Tim Rühsen  <tim.ruehsen@gmx.de>

        * src/pk-set.c (set_completion_function):
        Remove superfluous malloc within loop.

2020-04-03 Tim Rühsen  <tim.ruehsen@gmx.de>

        * src/pk-repl.c (pk_repl):
        Simplify malloc/strlen/strcpy/strcat with asprintf.

2020-04-03 Tim Rühsen  <tim.ruehsen@gmx.de>

	* src/pk-repl.c (pkl_complete_struct):
	Remove superfluous malloc within loop.

2020-04-03  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/Makefile.am (AM_MAKEINFOHTMLFLAGS): Define.
	(html-local): Refine the generated html files.

2020-04-03 Tim Rühsen  <tim.ruehsen@gmx.de>

	* src/pk-ios.c (pk_cmd_mem): Fix memleak.

2020-04-03 Tim Rühsen  <tim.ruehsen@gmx.de>

	* src/pk-ios.c (pk_cmd_mem):
	Simplify malloc/strlen/strcpy/strcat with asprintf.

2020-04-03 Tim Rühsen  <tim.ruehsen@gmx.de>

	* src/pk-ios.c (pk_cmd_load_file):
	Simplify malloc/strlen/strcpy/strcat with asprintf.

2020-04-03 Tim Rühsen  <tim.ruehsen@gmx.de>

	* src/pk-ios.c (pk_cmd_load_file): Fix reading file from
	POKEDATADIR.

2020-04-03  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi: Sectioning changes.

2020-04-03 Tim Rühsen  <tim.ruehsen@gmx.de>

	* src/pk-cmd.c (pk_cmd_get_next_match):
	Remove superfluous malloc within loop.

2020-04-03  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi: syntax-check fixes.

2020-04-03  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (Modifying SBM Images): Updated to cover mapped
	vs. non-mapped values.

2020-04-02  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (Modifying SBM Images): Renamed from `Cropping SBM
	Images'.

2020-04-03 Tim Rühsen  <tim.ruehsen@gmx.de>

	* src/pk-cmd.c (pk_cmd_init):
	Simplify malloc/strlen/strcpy/strcat with asprintf.

2020-04-02 Tim Rühsen  <tim.ruehsen@gmx.de>

	* src/pk-hserver.c (pk_hserver_make_hyperlink):