@@ -1,5 +1,12 @@
 2020-04-03  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* src/ios-dev-file.c (ios_dev_file_pread): Fix type of variable.
+	(ios_dev_file_pwrite): Likewise.
+	* src/pk-cmd.c (pk_cmd_exec_1): Likewise.
+	* src/pvm.jitter (aref): Remove unneeded check.
+
+2020-04-03  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* src/pk-dump.pk (dump): Avoid generating a spurious blank
 	character after the ASCII ruler.
 
